fix workflow formatting

--- a/.github/workflows/backups.yml
+++ b/.github/workflows/backups.yml
@@ -1,7 +1,7 @@
 name: Clone and Upload to S3
 
 on:
-  schedule:
+  # schedule:
     # Runs at 00:00 UTC every Sunday
     # - cron: '0 0 * * 0' # TODO: Uncomment this after testing
   workflow_dispatch:
