--- a/.github/workflows/backups.yml
+++ b/.github/workflows/backups.yml
@@ -19,13 +19,13 @@ jobs:
     steps:
       - id: set-matrix
         run: |
-          matrix=$(curl https://nf-co.re/pipeline_names.json)
-          # Extract the pipeline array from the JSON structure
-          matrix=$(echo $matrix | jq '.pipeline')
-          if [ -n "${{ inputs.pipeline }}" ] && [ "${{ inputs.pipeline }}" != "all" ]; then
-            matrix=$(echo $matrix | jq --arg pipeline "${{ inputs.pipeline }}" '[.[] | select(. == $pipeline)]')
+          json=$(curl -s https://nf-co.re/pipeline_names.json)
+          # Default to "all" if running on schedule (no inputs available) or if input is "all"
+          if [ -z "${{ inputs.pipeline }}" ] || [ "${{ inputs.pipeline }}" = "all" ]; then
+            echo "matrix=$json" >> $GITHUB_OUTPUT
+          else
+            echo "matrix=$(echo $json | jq --arg p "${{ inputs.pipeline }}" '{pipeline: [.pipeline[] | select(. == $p)]}')" >> $GITHUB_OUTPUT
           fi
-          echo "matrix=${matrix}" >> $GITHUB_OUTPUT
 
   backup:
     needs: get-pipelines
