feat: Implement GitHub invitation function and update Slack app workflow
- Added a custom function to invite users to GitHub repositories with configurable permission levels.
- Updated the Slack app manifest to enable the new function and adjusted settings for event subscriptions.
- Enhanced the README with setup instructions for the new workflow builder step.
- Updated dependencies in import map and lock files for compatibility.

--- a/invitation-bot/.gitignore
+++ b/invitation-bot/.gitignore
@@ -1,4 +1,16 @@
-dist
-package
-.DS_Store
-.slack/apps.dev.json
+# Deno specific
+.deno_dir/
+.env
+*.orig
+*.pyc
+*.swp
+
+# Build outputs
+/dist
+node_modules
+**/deno.lock
+**/.DS_Store
+
+# Slack specific
+.slack/apps.json
+.slack/auth.json
