--- a/.envrc
+++ b/.envrc
@@ -1,6 +1,6 @@
 # use flake
 
-# eval $(op signin nf-core)
+export OP_ACCOUNT=nf-core
 
 # FIXME https://github.com/tmatilai/direnv-1password/issues/6
 source_url "https://github.com/tmatilai/direnv-1password/raw/v1.0.1/1password.sh" \
