--- a/pulumi/test_datasets/pyproject.toml
+++ b/pulumi/test_datasets/pyproject.toml
@@ -7,5 +7,6 @@ requires-python = ">=3.12"
 dependencies = [
     "pulumi>=3.173.0",
     "pulumi-aws>=6.81.0",
+    "pulumi-github>=6.7.2",
     "pulumi-onepassword>=1.1.3",
 ]
