--- a/.github/workflows/repos.yml
+++ b/.github/workflows/repos.yml
@@ -5,6 +5,7 @@ on:
       - main
     paths:
       - "pulumi/github/repos/**/*"
+  workflow_dispatch:
   pull_request:
     branches:
       - main
@@ -47,8 +48,7 @@ jobs:
         working-directory: ${{ env.PULUMI_WORKING_DIRECTORY }}
 
       - name: PR previews
-        if: ${{ github.event_name == 'pull_request' }}
-        uses: pulumi/actions@v3
+        uses: pulumi/actions@v6
         with:
           command: preview
           stack-name: ${{ env.PULUMI_STACK_NAME }}
@@ -56,7 +56,7 @@ jobs:
 
       - name: Apply infrastructure update
         if: ${{ github.event_name == 'push' }}
-        uses: pulumi/actions@v3
+        uses: pulumi/actions@v6
         with:
           command: up
           stack-name: ${{ env.PULUMI_STACK_NAME }}
