build: Integrate 1Password provider for GitHub token management
- Added pulumi-onepassword dependency to manage GitHub tokens securely.
- Updated Pulumi configuration to include 1Password account details.
- Modified testpipeline.py to fetch GitHub token from 1Password and configure GitHub provider accordingly.

--- a/pulumi/github/repos/Pulumi.dev.yaml
+++ b/pulumi/github/repos/Pulumi.dev.yaml
@@ -1,5 +1,7 @@
 config:
   github:owner: nf-core-tf
-  # https://start.1password.com/open/i?a=O5GICFDKPNABLLVGMKBL5JWDWA&v=rdfcz6oy6qxxrc4clu467a7dmm&i=4ajrv44kc5lcbboa37fr5oydla&h=nf-core.1password.eu
+  # GitHub token stored in 1Password: https://start.1password.com/open/i?a=O5GICFDKPNABLLVGMKBL5JWDWA&v=rdfcz6oy6qxxrc4clu467a7dmm&i=4ajrv44kc5lcbboa37fr5oydla&h=nf-core.1password.eu
+  # 1Password provider configuration
+  pulumi-onepassword:account: nf-core.1password.eu
 environment:
   - github-nf-core-tf
