--- a/.github/workflows/repos.yml
+++ b/.github/workflows/repos.yml
@@ -42,7 +42,7 @@ jobs:
 
       - name: Install Python
         uses: actions/setup-python@v5
-        cache: 'pip'
+        cache: "pip"
 
       - run: pip install -r requirements.txt
         working-directory: ${{ env.PULUMI_WORKING_DIRECTORY }}
@@ -61,4 +61,3 @@ jobs:
           command: up
           stack-name: ${{ env.PULUMI_STACK_NAME }}
           work-dir: ${{ env.PULUMI_WORKING_DIRECTORY }}
-
