Add GitHub Actions workflow to discover and sync test dataset branches to S3 (#141)
* ci: Add GitHub Actions workflow to sync test datasets to S3

* ci: Refactor GitHub Actions workflow to discover and sync test dataset branches to S3

* ci: Update GitHub Actions workflow to trigger on pull requests for sync-test-datasets.yml

* ci: Update GitHub Actions workflow to use GitHub API for branch discovery in sync-test-datasets.yml

* ci: Add IAM user and policy for CI/CD access to test datasets S3 bucket

* ci: Update AWS region in sync-test-datasets workflow and S3 bucket policy to eu-north-1

* build: Use uv

- Modify .envrc to include 1Password integration and AWS credentials.
- Add .python-version file to specify Python 3.12.
- Create pyproject.toml for test-datasets with dependencies on pulumi, pulumi-aws, and pulumi-onepassword.
- Remove outdated requirements.txt.
- Add uv.lock for dependency management.

* ci: Integrate 1Password provider and update AWS configurations

- Update .envrc to set the OP_ACCOUNT for 1Password integration.
- Modify __main__.py to configure the 1Password provider and use it for AWS resources.
- Add service account token to Pulumi configuration for 1Password.
- Create README.md for test datasets directory.

* feat: Enhance Pulumi setup with GitHub integration and update environment configurations

- Update .envrc to comment out sensitive AWS credentials.
- Modify __main__.py to integrate GitHub provider and create GitHub Actions secrets for AWS credentials.
- Add pulumi-github dependency in pyproject.toml for GitHub integration.
- Create README.md to document the test datasets infrastructure and setup instructions.

* style: Run pre-commit

* chore: Import nf-core/test-datasets repo

Took me way too long to do this 🫠
`uv run pulumi import github:index/repository:Repository test-datasets-repo test-datasets`

* feat: Implement repository ruleset for branch protection in test-datasets

- Added a GitHub repository ruleset to restrict branch c

--- a/.envrc
+++ b/.envrc
@@ -1,1 +1,12 @@
-use flake
+# use flake
+
+# export OP_ACCOUNT=nf-core
+
+# FIXME https://github.com/tmatilai/direnv-1password/issues/6
+source_url "https://github.com/tmatilai/direnv-1password/raw/v1.0.1/1password.sh" \
+    "sha256-4dmKkmlPBNXimznxeehplDfiV+CvJiIzg7H1Pik4oqY="
+
+# from_op <<OP
+#     AWS_ACCESS_KEY_ID="op://Dev/Pulumi-AWS-key/access key id"
+#     AWS_SECRET_ACCESS_KEY="op://Dev/Pulumi-AWS-key/secret access key"
+# OP
