--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -28,6 +28,10 @@ repos:
           - types-jsonschema
           - types-Markdown
           - types-setuptools
+          - pulumi>=3.173.0
+          - pulumi-aws>=6.81.0
+          - pulumi-github>=6.7.2
+          - pulumi-onepassword>=1.1.3
 
   - repo: https://github.com/renovatebot/pre-commit-hooks
     rev: 38.142.7
