--- a/pulumi/AWSMegatests/seqerakit/compute-envs/aws_ireland_fusionv2_nvme_cpu.yml
+++ b/pulumi/AWSMegatests/seqerakit/compute-envs/aws_ireland_fusionv2_nvme_cpu.yml
@@ -15,4 +15,4 @@ compute-envs:
     max-cpus: 500
     allow-buckets: "$AWS_COMPUTE_ENV_ALLOWED_BUCKETS"
     wait: "AVAILABLE"
-    on_exists: 'overwrite'
+    on_exists: "overwrite"
