--- a/pulumi/AWSMegatests/seqerakit/compute-envs/aws_ireland_nofusion.yml
+++ b/pulumi/AWSMegatests/seqerakit/compute-envs/aws_ireland_nofusion.yml
@@ -14,4 +14,4 @@ compute-envs:
     max-cpus: 500
     allow-buckets: "$AWS_COMPUTE_ENV_ALLOWED_BUCKETS"
     wait: "AVAILABLE"
-    on_exists: 'overwrite'
+    on_exists: "overwrite"
