build: Fix from_op

--- a/pulumi/AWSMegatests/seqerakit/.envrc
+++ b/pulumi/AWSMegatests/seqerakit/.envrc
@@ -5,11 +5,9 @@ source_url "https://github.com/tmatilai/direnv-1password/raw/v1.0.1/1password.sh
     "sha256-4dmKkmlPBNXimznxeehplDfiV+CvJiIzg7H1Pik4oqY="
 
 # Load secrets from 1Password
-from_op <<OP
-    TOWER_ACCESS_TOKEN="op://Dev/Tower nf-core Access Token/password"
-    AWS_ACCESS_KEY_ID="op://Dev/AWS Tower Test Credentials/access key id"
-    AWS_SECRET_ACCESS_KEY="op://Dev/AWS Tower Test Credentials/secret access key"
-OP
+from_op TOWER_ACCESS_TOKEN="op://Employee/Seqera Platform Token/credential"
+from_op AWS_ACCESS_KEY_ID="op://Dev/AWS Tower Test Credentials/access key id"
+from_op AWS_SECRET_ACCESS_KEY="op://Dev/AWS Tower Test Credentials/secret access key"
 
 # Static configuration variables
 export ORGANIZATION_NAME="nf-core"
