--- a/pulumi/seqera_platform/resource_optimization/pyproject.toml
+++ b/pulumi/seqera_platform/resource_optimization/pyproject.toml
@@ -9,5 +9,5 @@ dependencies = [
     "pulumi-aws>=6.81.0,<7.0.0",
     "pulumi-github>=6.4.0,<7.0.0",
     "pulumi-command>=1.0.1,<2.0.0",
-    "pulumi-seqera>=0.25.0,<1.0.0",
+    # pulumi-seqera is not on PyPI, loaded from sdks/ directory via sys.path
 ]
