--- a/pulumi/seqera_platform/resource_optimization/requirements.txt
+++ b/pulumi/seqera_platform/resource_optimization/requirements.txt
@@ -2,4 +2,4 @@ pulumi>=3.173.0,<4.0.0
 pulumi-aws>=6.81.0,<7.0.0
 pulumi-github>=6.4.0,<7.0.0
 pulumi-command>=1.0.1,<2.0.0
-pulumi-seqera>=0.25.0,<1.0.0
+# pulumi-seqera is not on PyPI, loaded from sdks/ directory via sys.path
